<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>quill-delta</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <maxmemory>512</maxmemory>
          <minmemory>128m</minmemory>
          <source>17</source>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
            <id>attach-javadocs</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <configuration>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <serverId>ossrh</serverId>
        </configuration>
        <extensions>true</extensions>
        <groupId>org.sonatype.plugins</groupId>
        <version>1.6.13</version>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
            <id>attach-sources</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-gpg-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
            <goals>
              <goal>sign</goal>
            </goals>
            <id>sign-artifacts</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.22.1</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.13.4.2</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
      <version>5.8.1</version>
    </dependency>
  </dependencies>

  <description>A java implementation of the fabulous QuillJS delta.</description>
  <developers>
    <developer>
      <email>alan@mantoux.org</email>
      <name>Alan Mantoux</name>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <groupId>org.mantoux</groupId>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <modelVersion>4.0.0</modelVersion>

  <name>QuillDelta</name>

  <!-- Source Control Information, Github Stuff -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <!-- We are deploying to Sonatype, so enter Sonatype Distribution Stuff Here -->
  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <show>public</show>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.9.1</version>
      </plugin>
    </plugins>
  </reporting>

  <scm>
    <!-- Should be format scm:git:git or scm:git:https -->
    <connection>scm:git:https://github.com/amantoux/quill-delta.git</connection>
    <developerConnection>scm:git:ssh://github.com/amantoux/quill-delta.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/amantoux/quill-delta</url>
  </scm>

  <url>https://github.com/amantoux/quill-delta</url>

  <version>1.6.3</version>
</project>
